changed js space error

--- a/docker.html
+++ b/docker.html
@@ -87,7 +87,7 @@
         <li >Kuna Maheshwari</li>
         <li>K. Prathap Reddy</li>
         <li>Raja Sharma</li>
-        <li>Kartik Bharadwaj</li>
+        <li>Kartik Bhardwaj</li>
       </h1>
     </section>
 </div>
